--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -1,7 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Wild Series{% endblock %}
+{% block title %}Wild Series, All programs{% endblock %}
 
 {% block body %}
-    <h1>{{ website }} index</h1>
+    <h1>Toutes le séries présentes dans program : </h1>
+    {% for program in programs %}
+        <div>
+            <h2>{{ loop.index }} / {{ program.title }} - dans la category : {{ program.category.name }}</h2>
+            <p>{{ program.summary }}</p>
+             <a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
+        </div>
+    
+    {% endfor %}
+    <a href="{{ path('app_index')}}">
+        Retour à l'accueil
+        
+
 {% endblock %}
