--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -7,7 +7,8 @@
     {% for category in categories %}
         <div>
             <h2>{{ loop.index }} / {{ category.name }}</h2>
-            <a href="{{ path("category_show", { categoryName: category.name }) }}">Voir la liste des serie de cette catégorie</a>
+            <a href="{{ path("category_show", { categoryName: category.name }) }}">
+            Voir la liste des serie de cette catégorie</a>
         </div>
     {% endfor %}
 
