--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -13,7 +13,7 @@
     
     {% endfor %}
     <a href="{{ path('app_index')}}">
-        Retour à l'accueil
+        Retour à l'accueil</a>
         
 
 {% endblock %}
