--- a/templates/_navabar.html.twig
+++ b/templates/_navabar.html.twig
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/category">Catégorie</a>
+          <a class="nav-link active" aria-current="page" href="{{ path('category_index') }}">Catégorie</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
