--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -10,6 +10,7 @@
             <a href="{{ path("category_show", { categoryName: category.name }) }}">
             Voir la liste des serie de cette catégorie</a>
         </div>
+        {{ include('category/_delete_form.html.twig') }}
     {% endfor %}
 
     <a href="{{ path('app_index')}}">
