--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -9,6 +9,8 @@
         <p>{{ program.summary }}</p>
         <a href="{{ path("program_show", { id: program.id }) }}">
         Voir la fiche</a>
+        {{ include('category/_delete_form.html.twig') }}
+
     {% endfor %}
     <br>
      <a href="{{ path('program_index') }}">
