--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -9,7 +9,13 @@
             <h1 class="mt-0">{{ program.title }}</h1>
             <p>{{ program.summary }}</p>
             <p>Catégorie : {{ program.category.name }}</p>
+             <ul>
+                {% for actor in program.actors %}
+                    <a href="{{path('actor_show', {'id': actor.id}) }}"><li>{{ actor.name }} </li></a>
+                {% endfor %}
+            </ul>
         </div>
+        
     </div>
     <h2>Saisons</h2>
     <ul>
